--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.14"
+        "phpstan/phpstan": "^0.12.14",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "preferred-install": {
@@ -53,7 +54,9 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "phpstan": "phpstan analyse ."
+        "phpstan": "phpstan analyse .",
+        "phpcs": "phpcs --standard=phpcs.xml.dist --extensions=php,lib,inc",
+        "phpcbf": "phpcbf --standard=phpcs.xml.dist --extensions=php,lib,inc"
     },
     "conflict": {
         "symfony/symfony": "*"
